use icons for buttons, restrict showing of expand/collapse actions to only when a cell/row is selected in the grid, fixes to logic, extra edge case handling.

--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -401,3 +401,8 @@ td > input:disabled {
     border: none;
 }
 
+.nav-pills-valuation {
+    float: left;
+}
+
+
